@@ -111,11 +111,12 @@ hydra:
   overrides:
     hydra:
     - hydra.mode=RUN
-    task: []
+    task:
+    - seed=1
   job:
     name: demo
     chdir: null
-    override_dirname: ''
+    override_dirname: seed=1
     id: ???
     num: ???
     config_name: demo
