@@ -1,1 +1,1 @@
-[]
+- seed=1
