@@ -121,15 +121,16 @@ def pycolmap_to_batch_matrix(reconstruction, device="cuda"):
     """
     Inversion to batch_matrix_to_pycolmap, nothing but picking them back
     """
-    num_points3D = len(reconstruction.points3D)
     num_images = len(reconstruction.images)
+    max_points3D_id = max(reconstruction.point3D_ids())
+    points3D = np.zeros((max_points3D_id, 3))
+    
+    for point3D_id in reconstruction.points3D: 
+        points3D[point3D_id-1] = reconstruction.points3D[point3D_id].xyz
+    points3D = torch.from_numpy(points3D).to(device)
+    
 
-    points3D = torch.from_numpy(
-        np.array([reconstruction.points3D[point3D_id].xyz for point3D_id in range(1, num_points3D + 1)])
-    )
-    points3D = points3D.to(device)
-
-    extrinsics = torch.from_numpy(np.stack([reconstruction.images[i].cam_from_world.matrix for i in range(num_images)]))
+    extrinsics = torch.from_numpy(np.stack([reconstruction.images[i].cam_from_world.matrix() for i in range(num_images)]))
     extrinsics = extrinsics.to(device)
 
     intrinsics = torch.from_numpy(np.stack([reconstruction.cameras[i].calibration_matrix() for i in range(num_images)]))
